Header fixes for overflowing content. Put js main padding-top back in

--- a/css/less/custom/banner.less
+++ b/css/less/custom/banner.less
@@ -8,6 +8,7 @@ BANNER
 		background-size: cover;
 	    background-repeat: no-repeat;
 	    background-position: 50% 50%;
+	    overflow: hidden;
 	}
 
 	#banner-wrap {
