--- a/css/less/custom/general.less
+++ b/css/less/custom/general.less
@@ -83,10 +83,6 @@ CONTENT
 			position: relative;
 		}
 	}
-
-	.fixed + main {
-		padding-top: @bunting-height + @nav-item-height + @bunting-border-height;
-	}
 	
 	@media (max-width: @mobile-width) {
 		#main-wrap {
