--- a/css/less/custom/navigation.less
+++ b/css/less/custom/navigation.less
@@ -1,6 +1,18 @@
 /* -----------------------------
 SITE NAVIGATION
 ----------------------------- */
+@site-logo-width: 60%;
+@mobile-nav-break: 700px;
+@site-nav-background-color: @charliejackson-primary;
+@font-size: 1.5em;
+@bunting-width: 1.4em;
+@bunting-height: @bunting-width * 1.75;
+@nav-item-padding-value: 0.75em;
+@nav-item-padding: @nav-item-padding-value 0;
+@nav-item-height: ( @nav-item-padding-value * 2 ) + 1;
+@nav-transition: all 0.3s ease;
+@bunting-border-height: 0.2em;
+
 #site-navigation.fixed {
 	position: fixed;
 	top: 0;
@@ -154,6 +166,7 @@ SITE NAVIGATION
 		height: @bunting-height;
 		overflow: hidden;
 		text-align: center;
+		position: relative;
 		
 		#bunting-wrap {
 			display: inline-block;
